# commitizen-version-bump

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: test.yml
cz_version_bump/: __init__.py  git.py  thanks.py
tests/: test_thanks.py
