[tool.poetry]
name = "commitizen-version-bump"
version = "0.1.0"
description = "Commitizen customized for Meltano projects (https://commitizen-tools.github.io/commitizen/customization)"
authors = ["Meltano <hello@meltano.com>"]
packages = [
    {include = "cz_version_bump"}
]

[tool.poetry.dependencies]
commitizen = ">=3"
python = ">=3.8"
PyGithub = ">=1.59.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-httpserver = {version = "^1.0.8", python = "<4"}

[tool.poetry.plugins."commitizen.plugin"]
cz_version_bump = "cz_version_bump:MeltanoCommitizen"

[tool.pytest.ini_options]
addopts = ["-vvv", "-W error"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
